--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,15 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        // Please ensure you have a valid API KEY for themoviedb.org to use this app
+        // Please ensure you have a valid API KEY for theMovieDb.org to use this app
         // A valid key will need to be entered
         buildConfigField("String", "MOVIEDB_API_KEY", MOVIEDB_API_KEY)
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -20,28 +26,57 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding{
+    dataBinding {
         enabled = true
     }
 }
 repositories {
     mavenCentral()
 }
+ext {
+    supportLibVersion =  '27.1.1' //'27+'  // variable that can be referenced to keep support libs consistent
+    constraintLayoutVersion = '1.1.2'
+    picassoVersion = '2.71828'
+    okHttpVersion = '3.11.0'
+    stethoVersion = '1.5.0'
+    lifecycleVersion = '1.1.1'
+}
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:preference-v7:27.1.1'
-    implementation 'com.android.support:preference-v14:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.facebook.stetho:stetho:1.5.0'
-    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "com.android.support:exifinterface:$supportLibVersion"
+    implementation "com.android.support:support-v4:$supportLibVersion"
+    implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation "com.android.support:design:$supportLibVersion"
+    implementation "com.android.support:cardview-v7:$supportLibVersion"
+    implementation "com.android.support:preference-v7:$supportLibVersion"
+    implementation "com.android.support:preference-v14:$supportLibVersion"
+    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
+    //noinspection GradleDependency
+    implementation "com.android.support.constraint:constraint-layout:1.1.2"
+    implementation "com.squareup.picasso:picasso:2.71828"
+    implementation "com.squareup.okhttp3:okhttp:3.11.0"
+    implementation "com.facebook.stetho:stetho:1.5.0"
+    implementation "com.facebook.stetho:stetho-okhttp3:1.5.0"
+
+    // ViewModel and LiveData
+    //def lifecycleVersion = "1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+//     Support library depends on this lightweight import
+    implementation "android.arch.lifecycle:runtime:1.1.1"
+
+
+    //annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
+    // alternately - if using Java8, use the following instead of compiler
+    //implementation "android.arch.lifecycle:common-java8:1.1.1"
+    testImplementation "junit:junit:4.12"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
+    // optional - Test helpers for LiveData
+    testImplementation "android.arch.core:core-testing:1.1.1"
 }
